# sdl_barebones

./: CMakeLists.txt
src/: main.cpp
